# f1tenth-scoreapp

./: .editorconfig  .gitignore  .gitmodules  NODEJS-SETUP.md  README.md
.github/workflows/: backend-ci.yml  ci.yml
arrowhead/backend/: overlay.py3
backend/: .gitignore  README.md  barrier.go  client.go  crossingteam.go  go.mod  go.sum  hub.go  jsonduration.go  jsontime.go  main.go  racestate.go  racetype.go  trialstate.go
backend-arrowhead/: .gitignore  README.md  overlay.py3
barrier/optic_barrier_hw/: optic_barrier_hw.sch
barrier/optic_barrier_sw/: .gitignore  CMakeLists.txt  git.h.in  main.c
design/: .gitattributes  scoreapp.org
frontend/: .gitignore  README.md  TODO.md  netlify.toml  package.json  tsconfig.json  webpack.config.development.js  webpack.config.production.js
frontend/app/: index.tsx  manifest.json  notes.txt  queries.ts  routes.ts  template.ejs  types.ts
frontend/app/components/: LocalizedDate.tsx  breadcrumbs.tsx  common.tsx  content.tsx  crossings.tsx  data.tsx  inputs.tsx  layout.tsx  table.tsx  timers.tsx  ws.tsx
frontend/app/containers/: LocaleLoader.tsx  PageRouter.tsx  Root.tsx  RootWithChat.tsx  TopLevelRouter.tsx
frontend/app/forms-experimental/: FormController.ts  common.ts  compoments.tsx  inputs.tsx
frontend/app/helpers/: api.ts  common.ts  copy.ts  data.ts  hooks.ts  keyboard.ts  maps.ts  queries.ts  races-experimental.ts  races.ts  retry-policy.ts  trials.ts  (+3 more)
frontend/patches/: apply.sh  patch-formatjs-intl.sh
optic_barrier_sw/: CMakeLists.txt  main.c  shell.nix
optic_barrier_sw/OLED/Driver/: OLED_Config.c
(+38 files in other folders)
